--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "routerabfrage",
-  "license": "https://github.com/routerabfrage/License",
+  "author": "nightfrost1337",
+  "license": "https://github.com/NightFrost1337",
   "dependencies": {
     "discord.js": "^12.3.1",
     "enmap": "^5.7.1",
